--- a/package.json
+++ b/package.json
@@ -36,25 +36,29 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-bare.git"
     },
     "dependencies": {
+        "@babel/runtime": "^7.26.0",
         "bootstrap": "5.2.2",
         "jquery": "^3.6.1",
         "jquery.cookie": "^1.4.1"
     },
     "devDependencies": {
         "autoprefixer": "10.4.12",
-        "browser-sync": "2.27.10",
+        "browser-sync": "^3.0.3",
         "browserify": "^17.0.0",
         "chokidar": "3.5.3",
         "concurrently": "7.4.0",
         "css-minify": "^2.0.0",
         "esmify": "^2.1.1",
         "exorcist": "^2.0.0",
-        "postcss": "8.4.17",
+        "postcss": "^8.4.49",
         "prettier": "2.7.1",
-        "pug": "3.0.2",
+        "pug": "^3.0.3",
         "sass": "1.55.0",
         "shelljs": "0.8.5",
         "uglify-js": "^3.17.2",
         "upath": "2.0.1"
+    },
+    "overrides": {
+        "core-js": "3.32.2"
     }
 }
